Updates to Navbar - Fixed Issues with Navbar on smaller screens - Fixed issues with navbar blocking elements

--- a/src/CSS/global.css
+++ b/src/CSS/global.css
@@ -59,7 +59,7 @@ a:hover {
   left: 0;
   z-index: 2;
   overflow-y: visible !important;
-  max-height: 62px;
+  max-height: 200px !important;
 }
 
 #Footer {
